# drf-auth

./: README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
api_permission_project/: asgi.py  settings.py  urls.py  wsgi.py
courses/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
courses/migrations/: 0001_initial.py
